- Added events to reduce services coupling - Fixed circular dependencies for the services