@@ -7,7 +7,6 @@ import com.nazarov.projects.blog.models.BlogPost;
 import com.nazarov.projects.blog.models.Tag;
 import com.nazarov.projects.blog.models.User;
 import java.util.Set;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Component;
@@ -26,7 +25,7 @@ public class BlogPostEntityMapper {
             .getTags()
             .stream()
             .map(Tag::getName)
-            .collect(Collectors.toList()))
+            .toList())
         .build();
   }
 
@@ -38,7 +37,7 @@ public class BlogPostEntityMapper {
             .getTags()
             .stream()
             .map(Tag::getName)
-            .collect(Collectors.toList()))
+            .toList())
         .build();
   }
 
